' @autogenerated
@startuml
left to right direction
title Clases para tenant
class access.TenantTrustedClient{
uid:string
version:integer
}
class access.TenantRelyingParty{
uid:string
version:integer
}
class access.Tenant{
uid:string
name:string
domain:string
enabled:boolean
accessToAllApplications:boolean
version:integer
list()
retrieve()
create()
update()
delete()
enable()
disable()
}
access.TenantTrustedClient "N*"  o--  "1" access.Tenant: trustedClients
access.TenantRelyingParty "N*"  o--  "1" access.Tenant: relingParties

footer Generado el %date("dd.MM.yyyy' a las 'HH:mm")
@enduml
